# AndroNet

./: README.md  h --force origin main  pubspec.yaml
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  packet_parser.cpp  packet_parser.h  session_manager.cpp  session_manager.h  socket_forwarder.cpp  socket_forwarder.h
android/app/src/main/kotlin/com/example/andronet/: MainActivity.kt
android/app/src/main/kotlin/com/example/packet_analyzer/: MainActivity.kt  NativeInterface.kt  PacketVpnService.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
